--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet"> -->
     <!-- <link rel="stylesheet" href="libs/bootstrap/bootstrap.min.css"> -->
     <link rel="stylesheet" href="styles/main.css">
-    <title>Auto test</title>
+    <title>IT Sphere</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     </div>
     <div class="section1 active">
 
-        <h1 class="mobile-title">AUTO TEST</h1>
+        <h1 class="mobile-title">IT Sphere</h1>
         <div class="banner">
 
             <h4 class="banner__title">
