--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet"> -->
-    <!-- <link rel="stylesheet" href="libs/bootstrap/bootstrap.min.css"> -->
     <link rel="stylesheet" href="styles/main.css">
     <title>IT Sphere</title>
 </head>
@@ -15,8 +13,8 @@
 
     <div class="modal">
         <div class="modal__core">
-            <h1 id="modal-value">You win the GAME! Great!</h1>
-            <a href="index.html" class="home">Go Home</a>
+            <h1 id="modal-value">Congratulation!!! You win the GAME! Great!</h1>
+            <a href="index.html" class="home">Restart</a>
         </div>
     </div>
     <div class="section1 active">
@@ -50,7 +48,7 @@
 
                 </h2>
                 <p id="time-table"></p>
-                <div class="audio-checker">🔉</div>
+                <div class="audio-checker">🔊</div>
             </div>
             <div id="quiz__options" class="quiz__options">
 
